# FireGenerators

./: .gitignore  .mcp.json  .secrets.json  CLAUDE.md  GEMINI.md  HOW_TO_FIX_SECRETS.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_REVIEW.md  RAG_IMPLEMENTATION_GUIDE.md  README.md  data.csv  environment.yml  gitignore.txt  main.py  pyproject.toml  pyrefly.toml  pyrightconfig.json  requirements.txt  requirements_1.txt  setup.py  test.ipynb
data/: faiss_index.idx
my_app/: app.py  app.py.backup_feat_MTC.py  app_v2.py  main.py  requirements.txt  settings.py
my_app/assets/: style.css
my_app/chat_bot/finance_qa_rag/data/: finance_terms.json  squad_terms.json
my_app/chat_bot/finance_qa_rag/model/: train_qa_model.py
my_app/chat_bot/finance_qa_rag/preprocess/: convert_to_json.py  convert_to_squad.py
my_app/chat_bot/finance_qa_rag/rag/: rag_pipeline.py
my_app/chat_bot/finance_qa_rag/vectorstore/: build_index.py
my_app/chatbot/chat_core/: graph_builder.py  model_loader.py  prompt_loader.py
my_app/chatbot/langgraph_core/: __init__.py  graph_builder.py  llm_agents.py  prompt_loader.py
my_app/chatbot/notebooks/: chatbot.ipynb  chatbot_nodes.ipynb  human-in-the-loop-example.ipynb  prompt.ipynb
my_app/chatbot/services/: __init__.py  profile_service.py
my_app/chatbot/utils/: __init__.py  draw_graphs.py  profile_updater.py  state_helpers.py
my_app/contents/: create_contents.py
my_app/contents/2. contents/: contents_count.py  contents_경제.json  contents_사회.json
my_app/contents/3. recomendation/: explanation_generator.py  recomendation.py
my_app/contents/contents/: contents_count.py  contents_과학.json  contents_금융.json  contents_동향.json  contents_산업.json  data_migration.py  콘텐츠 보유 목록.txt  콘텐츠 보유 목록_250901.txt
my_app/contents/create_contents/: contents_경제.json  contents_사회.json  create_gemi.py  sample.json
my_app/contents/evaluation/: __init__.py  dashboard.py  data_diagnostic.py  human_feedback.py  human_feedback_collector.py  llm_judge.py  llm_judge_integrated.py  pipeline_evaluation.py  plan_evaluation.txt  profiles_test_rows.csv  result_analyzer.py
my_app/contents/recommendation/: context_builder.py  data_access.py  embed_index.py  embed_index_bge.py  embed_index_ko.py  embed_index_upstage_api.py  explanation_generator.py  hybrid_recommender_v2.py  recommendation.py  test_recommender.py  test_vec_comparison.py  user_contents_logger.py  vector_search.py
my_app/dashboard/: dashboard_1.py  dashboard_2.py
my_app/feedbeck/: app.py  auto_trade_feedback.py  config.json  feedbeck.py  feedbeck2.py  streamlit_app.py
my_app/home/: db.py  fx.py
my_app/pages/: home.py
my_app/pages/account/: google_login.py
my_app/quiz_core/: constants.py  eval_quality.py  logic.py  offline_eval.py  prompts.py  services.py  utils.py
my_app/rec/: main.py  user_profile_analysis.json
my_app/rec/data/: documents.jsonl  embeddings.npy  sp500_docs.jsonl  sp500_index.faiss
my_app/rec/data_seq/: documents.jsonl  faiss_index.idx
my_app/rec/data_sp500/: documents.jsonl  embeddings.npy  faiss_index.idx
my_app/rec/utils/: data_loader.py  llm_client.py
my_app/register/: asset.py  chatbot.py  register.py  survey.py
my_app/trading/: api_start.py  crud.py  fitness_test.py  main.py  models.py  schemas.py  services.py  setting.txt  stock.py  stock_simulation.py  stocks_held.py  stocks_held_fitness.py  stocks_held_gpt.py  streamlit_etf_analysis.py
my_app/trading/test/: home.py  trading.py
my_app/ui/: __init__.py  login.py
my_app/ui/admin/: admin_1.py  admin_2.py  admin_sample.py
my_app/ui/analysis/: analysis.py  auto_trade_feedback.py  config.json  streamlit_app.py
my_app/ui/chatbot/: 0. work_schedules.md  1. chatbot_settings.md  2. prompt_management_guide.md  3. strategy.md  __init__.py  chatbot.py  chatbot_backup.py  chatbot_sample.py  test_chain_debug.py  test_chatbot.py  test_css.py  test_notebook.ipynb  test_standalone.py
my_app/ui/chatbot/utils/: __init__.py  (+2 more)
my_app/ui/contents/: __init__.py  admin_components.py  constants.py  data_utils.py  hybrid_recommendation.py  recommendation_contents.py  styles.py  user_components.py  user_recommender.py
my_app/ui/dashboard/: dashboard_1.py
my_app/ui/home/: home.py  news_panel.py  portfolio_panel.py  profile_panel.py  router.py  styles.py  utils.py  widgets.py
my_app/ui/level_quiz/: generate_quiz_questions.py  quiz.py  state.py  ui_utils.py
my_app/ui/recommendation/: 2recommendation.py  build_vector_db.py  etf_documents.jsonl  rag_etf_recommendation.py  rag_recommendation.py  recommendation.py  setup_etf_pinecone.py
my_app/ui/settings/: settings_sample.py
my_app/ui/simulation/: simulation_sample.py
my_app/ui/style/: chatbot_test.py  main.py
my_app/ui/trading/: trading_ui.py
pages/: 1_📈_종목추천.py
(+148 files in other folders)
