[project]
name = "firegen"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10.0,<=3.10.18"
dependencies = [
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "ruff (>=0.12.11,<0.13.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "google-ai-generativelanguage (>=0.6.18,<0.7.0)",
    "google-genai (>=1.32.0,<2.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "anthropic (>=0.64.0,<0.65.0)",
    "storage3 (==0.12.1)",
    "supabase (>=2.18.1,<3.0.0)",
    "numpy (==1.26.4)",
    "google-auth (>=2.40.3,<3.0.0)",
    "langchain-teddynote (>=0.4.4,<0.5.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "deepl (>=1.22.0,<2.0.0)",
    "deprecation (>=2.1.0,<3.0.0)",
    "docutils (>=0.22,<0.23)",
    "feedparser (>=6.0.11,<7.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "geographiclib (>=2.1,<3.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "gitdb (>=4.0.12,<5.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "googleapis-common-protos (>=1.70.0,<2.0.0)",
    "gotrue (>=2.12.4,<3.0.0)",
    "grpcio (>=1.74.0,<2.0.0)",
    "grpcio-status (>=1.74.0,<2.0.0)",
    "httplib2 (>=0.30.0,<0.31.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "jsonpatch (>=1.33,<2.0)",
    "jsonpointer (>=3.0.0,<4.0.0)",
    "kiwipiepy (>=0.21.0,<0.22.0)",
    "kiwipiepy-model (>=0.21.0,<0.22.0)",
    "langchain-core (>=0.3.75,<0.4.0)",
    "langchain-google-genai (>=2.1.10,<3.0.0)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langgraph-checkpoint (>=2.1.1,<3.0.0)",
    "langgraph-prebuilt (>=0.6.4,<0.7.0)",
    "langgraph-sdk (>=0.2.4,<0.3.0)",
    "langsmith (>=0.4.21,<0.5.0)",
    "lz4 (>=4.4.4,<5.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "markdown-it-py (>=4.0.0,<5.0.0)",
    "mdurl (>=0.1.2,<0.2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "olefile (>=0.47,<0.48)",
    "openai (>=1.103.0,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "multitasking (>=0.0.12,<0.0.13)",
    "narwhals (>=2.3.0,<3.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "ormsgpack (>=1.10.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "postgrest (>=1.1.1,<2.0.0)",
    "proto-plus (>=1.26.1,<2.0.0)",
    "protobuf (>=6.32.0,<7.0.0)",
    "protoc-gen-openapiv2 (>=0.0.1,<0.0.2)",
    "pytz (>=2025.2,<2026.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "realtime (>=2.7.0,<3.0.0)",
    "regex (>=2025.9.1,<2026.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "rsa (>=4.9.1,<5.0.0)",
    "sgmllib3k (>=1.0.0,<2.0.0)",
    "smmap (>=5.0.2,<6.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "starlette (>=0.47.3,<0.48.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
    "supafunc (>=0.10.2,<0.11.0)",
    "tavily-python (>=0.7.11,<0.8.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tomlkit (>=0.13.3,<0.14.0)",
    "types-requests (>=2.32.4.20250809,<3.0.0.0)",
    "typing-inspection (>=0.4.1,<0.5.0)",
    "tzdata (>=2025.2,<2026.0)",
    "uritemplate (>=4.2.0,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "zstandard (>=0.24.0,<0.25.0)",
    "finance-datareader (>=0.9.96,<0.10.0)",
    "pandas-ta (>=0.3.14b0,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
